catch up streaming upload in IT and fixed surfaced Anthropic bug whereby its AITextHandler forgot to record the uploaded file in history